<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="130dp"
    android:layout_height="105dp"
    android:layout_marginRight="16dp"
    app:cardElevation="@dimen/card_elevation"
    app:cardPreventCornerOverlap="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/company_name"
            style="@style/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/company_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rate_from"
            style="@style/from_4_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_name" />

        <TextView
            android:id="@+id/rate"
            style="@style/from_4_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/rate"
            app:layout_constraintStart_toEndOf="@+id/rate_from"
            app:layout_constraintTop_toBottomOf="@+id/company_name" />

        <TextView
            android:id="@+id/percentage"
            style="@style/from_4_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/percentage"
            app:layout_constraintStart_toEndOf="@+id/rate"
            app:layout_constraintTop_toBottomOf="@+id/company_name" />

        <ImageView
            android:id="@+id/shopping_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_shopping_bag"
            app:layout_constraintStart_toEndOf="@+id/company_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/products"
            style="@style/clothes_and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="17dp"
            android:text="@string/product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate_from" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>